--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
         <activity android:name=".AddNewActivity">
         </activity>
+        <activity android:name=".ShowTotalActivity">
+        </activity>
     </application>
 
 </manifest>
